--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@ body {
     margin: 0;
     padding: 0;
     color: #333;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .container {
@@ -24,6 +27,7 @@ header h1 {
 }
 
 main {
+    flex: 1;
     padding: 20px 0;
 }
 
@@ -32,9 +36,8 @@ footer {
     color: #fff;
     text-align: center;
     padding: 10px 0;
-    position: fixed;
+    position: relative;
     width: 100%;
-    bottom: 0;
 }
 
 a {
